const hireCompany = require('./hireCompany')


class chargePoint {

    constructor(location) {
    this.location = location;
    }
    scootersAvailable(number) {
        getSelection(); scootersAvailable;
    }

    isScooterCharging() {
        if (scooter = charging) {
            return "Yes"
        } else {
            return "No"
        }

    }
}

const hampsonPark = new chargePoint("Stevenage");
console.log(hampsonPark.location);

module.exports = chargePoint