const Account = require('./account')

class DVLA {

    verifyAccount() {
        if (account = verified) {
            return "Verified"
        } else {
            return "Unverified"
        }
    }
}

module.exports = DVLA